--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -28,16 +28,14 @@
 			<div class="cell" data-cell='8'>N</div>	
 		</div>
 		<!-- Grid end here -->
-		<br><br><br>
-		<!-- Button to reset game -->
-		<button id="but" onclick="myfunc_2()">
-			RESET
-		</button>
-
 		<br><br>
 		<!-- Space to show player turn -->
 		<p id="print"></p>
-
+		<!-- Button to reset game -->
+		<button id="rst">
+			RESET
+		</button>
+		<br><br>
 	</div>
 	<script src="script.js"></script>
 </body>
